--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
      - mysql
      - web
     environment:
-      DD_API_KEY: "9188be29f3f36868deeb11865280b24f"
+      DD_API_KEY: "xxxxxxxxxxxxxxxxxxxxxx"
       DD_DOGSTATSD_NON_LOCAL_TRAFFIC: "true"
       DD_SITE: "datadoghq.com"
       DD_TRACE_ENABLED: "true"
